@@ -1,3 +1,22 @@
+/*
+ * GovPay - Porta di Accesso al Nodo dei Pagamenti SPC
+ * http://www.gov4j.it/govpay
+ *
+ * Copyright (c) 2014-2026 Link.it srl (http://www.link.it).
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 3, as published by
+ * the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
 package it.govpay.bd.model;
 
 import java.util.ArrayList;
@@ -60,7 +79,7 @@ public class Utenza extends it.govpay.model.Utenza {
 	public List<Acl> getAclsProfilo() {
 		List<Acl> collect = new ArrayList<>();
 		
-		Map<Servizio, List<Acl>> mapServizio = new HashMap<it.govpay.model.Acl.Servizio, List<Acl>>();
+		Map<Servizio, List<Acl>> mapServizio = new HashMap<>();
 		
 		List<Acl> acls = this.getAcls();
 		for (Acl acl : acls) {
@@ -68,7 +87,7 @@ public class Utenza extends it.govpay.model.Utenza {
 			List<Acl> remove = mapServizio.remove(acl.getServizio());
 			
 			if(remove == null)
-				remove = new ArrayList<Acl>();
+				remove = new ArrayList<>();
 			
 			remove.add(acl);
 			mapServizio.put(acl.getServizio(), remove);
@@ -95,9 +114,9 @@ public class Utenza extends it.govpay.model.Utenza {
 		return false;
 	}
 	
-	public List<Long> getIdDomini() { // TODO
+	public List<Long> getIdDomini() {
 		if(this.dominiUo != null) {
-			List<Long> idDomini = new ArrayList<Long>();
+			List<Long> idDomini = new ArrayList<>();
 			
 			for(IdUnitaOperativa id: this.dominiUo) {
 				if(id.getIdDominio() != null) {
@@ -112,9 +131,9 @@ public class Utenza extends it.govpay.model.Utenza {
 		return null;
 	}
 
-	public List<String> getIdDominio() { // TODO
+	public List<String> getIdDominio() {
 		if(this.dominiUo != null) {
-			List<String> codDomini = new ArrayList<String>();
+			List<String> codDomini = new ArrayList<>();
 			
 			for(IdUnitaOperativa id: this.dominiUo) {
 				if(id.getCodDominio() != null) {
@@ -130,12 +149,12 @@ public class Utenza extends it.govpay.model.Utenza {
 	}
 
 	public List<String> getIdTipoVersamento() {
-		return this.tipiVersamento != null ? this.tipiVersamento.stream().map(d -> d.getCodTipoVersamento()).collect(Collectors.toList()) : null;
+		return this.tipiVersamento != null ? this.tipiVersamento.stream().map(d -> d.getCodTipoVersamento()).toList() : null;
 	}
 	
 	public List<IdUnitaOperativa> getDominiUo(String codDominio) {
 		if(this.dominiUo != null) {
-			List<IdUnitaOperativa> listaUO = new ArrayList<IdUnitaOperativa>();
+			List<IdUnitaOperativa> listaUO = new ArrayList<>();
 			for (IdUnitaOperativa idUnitaOperativa : dominiUo) {
 				if(idUnitaOperativa.getCodDominio() != null && idUnitaOperativa.getCodDominio().equals(codDominio))
 					listaUO.add(idUnitaOperativa);
@@ -163,6 +182,7 @@ public class Utenza extends it.govpay.model.Utenza {
 							idUo.setRagioneSociale(dominio.getRagioneSociale());
 						}
 					} catch (NotFoundException e) {
+						// donothing
 					}
 					try {
 						if(idUo.getIdUnita() != null) {
@@ -172,6 +192,7 @@ public class Utenza extends it.govpay.model.Utenza {
 						}
 						this.dominiUo.add(idUo);
 					} catch (NotFoundException e) {
+						// donothing
 					}
 				}
 			}
